# CharLS

./: .gitignore  CMakeLists.txt  CharLS.vcxproj  CharLS_VS2010.sln  charls_jni.cpp  charls_jni.h  file_buffer.cpp  file_buffer.h
net/: CharLSNet.csproj
nettest/: CharLSNetTest.csproj
plainc/: plainc.vcxproj
samples/convert/: Convert.csproj
test/: test.vcxproj
